24/07/2018
==========
-Loads Z80 128k files in ZX Spectrum 128k
-More work on usrintf 

23/07/2018
==========
-Added ZX Spectrum driver
-Added ZX Spectrum (BusySoft Upgrade) driver
-Added ZX Spectrum (De Groot's Upgrade) driver
-Added ZX Spectrum (Collier's Upgrade) driver
-Added ZX Spectrum (LEC Upgrade) driver
-Added Inves Spectrum 48K+ driver
-Added TK90x Color Computer driver
-Added TK95 Color Computer driver
-Added TC2048 driver
-Added TS2068 driver
-Added ZX Spectrum 128 driver
-Added ZX Spectrum 128 (Spain) driver
-Added ZX Spectrum +2 driver
-Added ZX Spectrum +2a driver
-Added ZX Spectrum +3 driver
-Added ZX Spectrum +2 (France) driver
-Added ZX Spectrum +2 (Spain) driver
-Added ZX Spectrum +3 (Spain) driver
-Added ZX Spectrum +3e driver
-Added ZX Spectrum +4 driver
-Sound, tape and disk emulation for all ZX Spectrum models not implemented
-Added speaker sound emulation (not tested)
-Moved eventlst and border to mess package
-Ported ui_text, ui_textH to mess specific (0.37b7)
-Intial work to port usrintrf to mess specific (0.37b7)

22/07/2018
==========
-First preliminary version of the 128k model. WIP, doesn't works (several memory banks issues)

20/07/2018
==========
-Full SNA and Z80 file formats support

19/07/2018
==========
-Initial zx spectrum 48k driver but doesn't seem to work properly
-Added border class and preliminary border emulation
-Added first version of eventlst

20/03/2018
==========
-More nes driver progress but doesn't seem to work properly

19/03/2018
==========
-Some intial work on nes driver
-More progress to nes driver (still very intial)

17/03/2018
==========
-Used z80 from arcadeflex_037b7 accurate project
-Some fixes to sms vdp (increased vdp mem) . Now sonic appears to work ok. Some more sms games appears to work as well

04/03/2018
==========
-Added ym2413 sound chip needed for sms emulation
-Added sms driver (WIP)

01/03/2018
==========
-Started rewritting fileio for mess . Roms are now loaded from bios folder