@@ -1,3 +1,7 @@
+25/07/2018
+==========
+-Implemented displayImageInfo and a few more functions in mess.java
+
 24/07/2018
 ==========
 -Loads Z80 128k files in ZX Spectrum 128k
